--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.6",
+    "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.7",
@@ -14,6 +15,7 @@
     "next-auth": "4.0.0-beta.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.6.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
